--- a/flashbtc/index.css
+++ b/flashbtc/index.css
@@ -178,6 +178,15 @@ body {
     color: lime;
 }
 
+#demoTry {
+    margin-right: .2em;
+    margin-top: 1em;
+    margin-left: .8em;
+    background-color: black;
+    border-color: lime;
+    color: lime;
+}
+
 .container2 {
     margin-top: 3em;
     border: 1px solid white;
