--- a/flashbtc/index.css
+++ b/flashbtc/index.css
@@ -430,3 +430,22 @@ body {
  #activationInput :focus {
     border-color: white;
  }
+
+ .warning-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #721c24; /* Dark red background color */
+    color: #fff; /* White text color */
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* display: flex; */
+    display: none;
+    align-items: center;
+}
+
+.warning-icon {
+    margin-right: 10px;
+    font-size: 24px;
+}
